W-17463327: Update parent-pom version in http-connector